--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.cropit.js")"></script>
     <script src="@Url.Content("~/Scripts/icheck.min.js")"></script>
     <script src="@Url.Content("~/Scripts/select2.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/material.min.js")"></script>
     <script src="@Url.Content("~/Scripts/daterangepiker/daterangepicker.js")"></script>
 
     <script src="@Url.Content("~/Scripts/blockUI.js")"></script>
