--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -11,27 +11,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>@ViewBag.Title - @WebApp.Models.AppSettings.AppName</title>
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
     <!-- Font Awesome -->
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="@Url.Content("~/Content/css/font-awesome.min.css")" rel="stylesheet">
-
     <!-- Custom Theme Style -->
-    @*<link href="@Url.Content("~/Content/css/green.css")" rel="stylesheet">*@
-    @*<link href="@Url.Content("~/Content/css/custom.min.css")" rel="stylesheet">
-    <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet">*@
-    @Styles.Render("~/Content/NewCss")
-
-
-    @*@Scripts.Render("~/bundles/modernizr")*@
-
-    @*@Scripts.Render("~/bundles/jquery")*@
-    @Scripts.Render("~/bundles/js")
+    <link href="@Url.Content("~/Content/css/custom.min.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/css/select2.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/css/pnotify.css")" rel="stylesheet">
+    <link href="@Url.Content("/Content/css/green.css")" rel="stylesheet" />
+    <link href="@Url.Content("/Content/css/switchery.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("/Content/css/bootstrap-material-datetimepicker.css")" rel="stylesheet" />
+    
+    
+    <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    @*<script type="text/javascript" src="https://rawgit.com/FezVrasta/bootstrap-material-design/master/dist/js/material.min.js"></script>*@
+    <script type="text/javascript" src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/custom.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/pnotify.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.cropit.js")"></script>
+    <script src="@Url.Content("~/Scripts/icheck.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/select2.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/material.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/daterangepiker/daterangepicker.js")"></script>
     <script src="@Url.Content("~/Scripts/blockUI.js")"></script>
     <script src="@Url.Content("~/Scripts/general.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.cropit.js")"></script>
-    <script src="@Url.Content("~/Scripts/daterangepiker/daterangepicker.js")"></script>
-  
+    <script src="@Url.Content("~/Scripts/jquery.cookie.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.signalR-2.2.1.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.dataTables.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/dataTables.bootstrap.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/dataTables.buttons.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/dataTables.responsive.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.smartWizard.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/switchery.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap-material-datetimepicker.js")"></script>
+    
+    
 
     <style type="text/css">
         .redBorder, .redBorder:focus, .redBorder:active {
@@ -197,67 +215,7 @@
                                 </ul>
                             </li>
 
-                            <li role="presentation" class="dropdown">
-
-                                <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="~/Content/images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                                <span>John Smith</span>
-                                                <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                                Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="~/Content/images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                                <span>John Smith</span>
-                                                <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                                Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="~/Content/images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                                <span>John Smith</span>
-                                                <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                                Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="~/Content/images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                                <span>John Smith</span>
-                                                <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                                Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <div class="text-center">
-                                            <a href="@Url.Action("Index","Alert")">
-                                                <strong>See All Messages</strong>
-                                                <i class="fa fa-angle-right"></i>
-                                            </a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </li>
+                            
                             <li>
                                 <div id="divAlerts">
                                     @{
