--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -314,7 +314,7 @@
             ]
         };
 
-        function makeCallToPatient(patId, appId) {
+        function makeCallToPatient(patId, appId,consultID) {
 
             var oPatInfo = null;
             for (var i = 0; i < availablePatients.patient.length; i++) {
