--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -257,7 +257,7 @@
     <script src="~/signalr/hubs"></script>
     <script type="text/javascript">
 
-        
+
         // Proxy created on the fly
         var chat = $.connection.chatHub;
         var senderConnectionId;
@@ -359,7 +359,48 @@
                 UserGroup: 'doctors'
             });
         }*@
+        function createConsult(doctorID, patientID, appID) {
+            _objConsult["doctorId"] = doctorID;
+            _objConsult["patientId"] = patientID;
+            _objConsult["appID"] = appID;
+            _objConsult["sessionID"] = "0";
+            _objConsult["token"] = "0";
+            _objConsult["userID"] = '0'
 
+            $.ajax({
+                type: 'POST',
+                url: '/Doctor/CreateConsult',
+                data: JSON.stringify(_objConsult),
+                contentType: "application/json",
+                dataType: 'json',
+                success: function (response) {
+
+                    if (response.Success == true) {
+                        if (response.ApiResultModel.message != "") {
+                            new PNotify({
+                                title: 'Error',
+                                text: response.ApiResultModel.message,
+                                type: 'error',
+                                styling: 'bootstrap3'
+                            });
+                        }
+                        else if (response.ApiResultModel.message == "") {
+                            new PNotify({
+                                title: 'Success',
+                                text: "Consultation is created successfully.",
+                                type: 'info', addclass: 'dark',
+                                styling: 'bootstrap3'
+                            });
+                            makeCallToPatient(patientID, appID, response.ApiResultModel.ID);
+
+                        }
+                    }
+
+                },
+                error: errorRes
+
+            });
+        }
         $(function () {
 
             chat.client.receiveMessage = function (msgFrom, msg, senderConnId, senderid) {
@@ -412,19 +453,64 @@
                         AppId: appId
                     });
 
-                    var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId=@SessionHandler.UserInfo.Id&userType=Patient&receiverId=" + senderid + "&doctorName=" + docName + "&patientName=@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)&aptId=" + appId;
 
-                    $.post(cUrlReadyForCall, function (oResp) {
-                        if (oResp) {
-                            localStorage.setItem('consultationKey', oResp);
+                    //Create Consult , in succcess cal below
+                    debugger;
+                    var _objConsult = {};
+                    _objConsult["doctorId"] = senderid;
+                    _objConsult["patientId"] = '@SessionHandler.UserInfo.Id';
+                    _objConsult["appID"] = appId;
+                    _objConsult["sessionID"] = "0";
+                    _objConsult["token"] = "0";
+                    _objConsult["userID"] = '@SessionHandler.UserInfo.userId';
+                    $.ajax({
+                        type: 'POST',
+                        url: '/Doctor/CreateConsult',
+                        data: JSON.stringify(_objConsult),
+                        contentType: "application/json",
+                        dataType: 'json',
+                        success: function (response) {
 
-                            chat.server.patientRedirectedToCall
-                                (senderConnId, oResp, '@SessionHandler.UserInfo.Id', '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)');
+                            if (response.Success == true) {
+                                if (response.ApiResultModel.message != "") {
+                                    new PNotify({
+                                        title: 'Error',
+                                        text: response.ApiResultModel.message,
+                                        type: 'error',
+                                        styling: 'bootstrap3'
+                                    });
+                                }
+                                else if (response.ApiResultModel.message == "") {
+                                    new PNotify({
+                                        title: 'Success',
+                                        text: "Consultation is created successfully.",
+                                        type: 'info', addclass: 'dark',
+                                        styling: 'bootstrap3'
+                                    });
+                                    var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId=@SessionHandler.UserInfo.Id&userType=Patient&receiverId=" + senderid + "&doctorName=" + docName + "&patientName=@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)&aptId=" + appId;
 
-                            //Redirect doctor to call
-                            window.location = '@Url.Action("Index","UserChat")';
-                        }
+                                    $.post(cUrlReadyForCall, function (oResp) {
+                                        if (oResp) {
+                                            localStorage.setItem('consultationKey', oResp);
+
+                                            chat.server.patientRedirectedToCall
+                                                (senderConnId, oResp, '@SessionHandler.UserInfo.Id', '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)');
+
+                                            //Redirect doctor to call
+                                            window.location = '@Url.Action("Index","UserChat")';
+                                        }
+                                    });
+
+                                }
+                            }
+
+                        },
+                        error: errorRes
+
                     });
+
+
+                    
 
                 }
                 else {
@@ -444,7 +530,7 @@
             chat.client.showConnected = function (message) {
                 availableDoctors.doctor = [];
 
-                
+
                 console.log(message);
 
                 for (var i = 0; i < message.length; i++) {
