utctime work for saving appointment

--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -73,13 +73,13 @@ else
         
 
        // $('#datatable').dataTable();
-        $('#datatable').dataTable({
-            'order': [[1, 'asc']],
-            columnDefs: [
-              { type: 'date-yyyy-mm-dd', targets: 1 },
+        //$('#datatable').dataTable({
+        //    'order': [[1, 'asc']],
+        //    columnDefs: [
+        //      { type: 'date-yyyy-mm-dd', targets: 1 },
              
-            ]
-        });
+        //    ]
+        //});
         $('#datatable-keytable').DataTable({
           keys: true
         });
