--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -192,7 +192,7 @@
                                                 <label class="control-label">Perferred Time:</label>
                                                 <div class="form-group">
 
-                                                    <input style:display:"none" type="text" id="time" class="form-control floating-label" placeholder="Time">
+                                                    @*<input style:display:"none" type="text" id="time" class="form-control floating-label" placeholder="Time">*@
                                                     <select class="form-control" name="Shift">
                                                         <option value="A">ALL</option>
                                                         <option value="M">Morning</option>
