css for datatable sorting icon

--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -23,6 +23,8 @@
     <link href="@Url.Content("~/Content/css/pnotify.css")" rel="stylesheet">
     <link href="@Url.Content("/Content/css/green.css")" rel="stylesheet" />
     <link href="@Url.Content("/Content/css/switchery.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("/Content/css/dataTables.bootstrap.min.css")" rel="stylesheet" />
+    
     <link href="@Url.Content("/Content/css/bootstrap-material-datetimepicker.css")" rel="stylesheet" />
     
     
