--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -858,23 +858,28 @@
             handleSuccess: function () {
 
                 CreateAppointment(@ViewBag.PatienID,@amount);
-                var signalRInfo = JSON.parse(localStorage.getItem('signalRInfo'));
-                //check for apptype if l then go here
-                //create consult here
-                var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId="+ signalRInfo.SenderId +"&userType=Patient&receiverId=" + signalRInfo.ReceiverId + "&recipientName=" + signalRInfo.RecipientName;
+                if(appType="L")
+                {
 
-                $.post(cUrlReadyForCall, function (oResp) {
-                    if (oResp) {
-                        localStorage.setItem('consultationKey', oResp);
+               
+                    var signalRInfo = JSON.parse(localStorage.getItem('signalRInfo'));
+                    //check for apptype if l then go here
+                    //create consult here
+                    var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId="+ signalRInfo.SenderId +"&userType=Patient&receiverId=" + signalRInfo.ReceiverId + "&recipientName=" + signalRInfo.RecipientName;
+
+                    $.post(cUrlReadyForCall, function (oResp) {
+                        if (oResp) {
+                            localStorage.setItem('consultationKey', oResp);
                         
-                        //Redirect doctor to call
-                        window.location = '@Url.Action("Index","UserChat")';
-                    }
-                });
+                            //Redirect doctor to call
+                            window.location = '@Url.Action("Index","UserChat")';
+                        }
+                    });
 
-                //Redirect User for video chat
-                alert("Payment successful! Now user can be redirected to video chat page with doctor.");
-                //location.reload();
+                    //Redirect User for video chat
+                    alert("Payment successful! Now user can be redirected to video chat page with doctor.");
+                    //location.reload();
+                }
             },
             handleFailure: function () {
                 alert("OOPS! Some thing goes wrong. User can be redirected to appropriate page.");
@@ -1007,13 +1012,9 @@
 
 @*For Medicine*@
 <script>
-    //jQuery('#myMedicine').on('input', function() {
-    //alert($("#myMedicine").val());
-    //GetMedicines($("#myMedicine").val());
-    //});
+   
     $(document).ready(function () {
 
-        //GetMedicines($("#myMedicine").val());
         GetMedications(@ViewBag.PatienID);
         GetFrequency();
         $('#medicinestable').DataTable({
